# massliver

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
EnzymeModuleData/: AlanineTransferase_P25409.tsv  AspartateAminotransferase_P13221.tsv  FrutoseBisphosphatase_P09467.tsv  FrutoseBisphosphatase_P19112.tsv  FrutoseBisphosphatase_Q9Z1N1.tsv  GlycogenSynthase_P67999.tsv  HMGCoASynthase_P54869.tsv  Intro  IsocitrateDehydrogenaseAlpha_Q99NA5.tsv  IsocitrateDehydrogenaseBeta_Q68FX0.tsv  IsocitrateDehydrogenaseGamma_P41565.tsv  Ketohexokinase_Q02974.tsv  Ketohexokinase_Q0II75.tsv  PhosphoenolpyruvateCarboxykinase_P07379.tsv  Phosphofructokinase_P17858.tsv  Phosphofructokinase_P30835.tsv  PyruvateKinase_P11980.tsv  PyruvateKinase_P12928.tsv
models/: 1.0-ma-Construction-Ketone.ipynb  1.0-srp-Construction-Sucrose_Metabolism.ipynb  1.0-srp-Notebook-Fructolysis.ipynb  1.0-srp-Notebook-Glycogen Biosynthesis _ Degradation combine.ipynb  1.0-srp-Notebook-PPP.ipynb  1.1-ma-quadratic programming test.ipynb  1.1-srp-Notebook-Glycogen Biosynthesis _ Degradation combine.ipynb  1.1-srp-Notebook-PPP.ipynb  1.2-ma-quadratic programming test.ipynb  1.2-srp-Notebook-Glycolysis_gluconeogenesis_lactate_fermentation.ipynb  1.3-ma-quadratic programming test.ipynb  1.4-ma-quadratic programming test.ipynb  1.5-Notebook-Glycolysis ONLY-trial.ipynb  1.5-ma-quadratic programming test.ipynb  1.6-Notebook-Glycolysis ONLY-trial.ipynb  1.8a-ma-quadratic programming test.ipynb  CoreModel.json  Fructolysis.json  Fructolysis_SucroseMetabolism.json  Fructolysis_SucroseMetabolism.map.json  Glycogen.json  (+12 more)
(+219 files in other folders)
