[metadata]
name = massliver
version = attr: massliver.__version__
url = https://github.com/z-haiman/massliver
project_urls =
    Source = https://github.com/z-haiman/massliver
author = z-haiman
author_email = zhaiman@eng.ucsd.edu
maintainer = z-haiman
maintainer_email = zhaiman@eng.ucsd.edu
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Scientific/Engineering :: Bio-Informatics
license = MIT
license_file = LICENSE
description = A repository for the MASSpy liver model project
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords =
    metabolism
	biology
	constraint-based modeling
	linear programming
	mixed-integer
	optimization
	flux-balance analysis
	reconstruction
    dynamic simulation
    kinetic modeling
    ordinary differential equations

[options]
zip_safe = True
install_requires =
    masspy ~= 0.1.1
    beautifulsoup4
    depinfo
    numpy
    pandas
    requests
    BeautifulSoup
    
python_requires = ~=3.6
include_package_data = True
packages = find:
package_dir =
	= src

[options.packages.find]
where = src
include =
    massliver

[options.extras_require]
dev =
    bumpversion
    pre-commit
    tox
all =
    %(dev)s


[flake8]
ignore = E203, E266, E501, W503, F401
max-line-length = 88
max-complexity = 18
